<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Guidance</name>
  <version>0.0.1</version>
  <description>Guidance package for Crazyflie BMO simulation</description>
  <maintainer email="you@email.com">your name</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 -->
  <depend>rclpy</depend>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>navigation</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>